k8s/components/wordpress-app/wordpress/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: devops-demo--wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: public.ecr.aws/bitnami/wordpress-nginx:6.9.4-debian-12-r1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
              name: http

          resources:
            requests:
              cpu: "400m"
              memory: "100Mi"
            limits:
              cpu: "1500m"
              memory: "1Gi"

          startupProbe:
            httpGet:
              path: /wp-admin/install.php
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /wp-login.php
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
