k8s/components/wordpress-app/wordpress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: devops-demo--wordpress
spec:
  selector:
    app: wordpress
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
